<resources>
    <string name="app_name">House Finder</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_houses_list">Houses</string>
    <string name="title_houses_detail">Houses Detail</string>
    <string name="menu_setting">Setting</string>
    <string name="smoke_setting">Smoke</string>
    <string name="pet_setting">Pet</string>
    <string name="house_price_setting">Housing Price</string>
    <string name="search_range_setting">Search Range</string>
    <string name="search_maximum_people">Maximum People</string>
    <string name="search_minimum_toilet">Minimum toilet</string>

    <string name="setting_description">Description</string>
    <string name="dummy">dummy</string>
    <string name="Otago_About">about</string>

    <string name="setting_heater">Heater</string>
    <string name="setting_fridge">Fridge</string>
    <string name="setting_hotWater">Hot Water</string>
    <string name="setting_kitchen_tools">Kitchen_tools</string>
    <string name="setting_insulation">Insulation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="saved_house_info">
        <item>string_value1</item>
        <item>string_value2</item>
        <item>string_value3</item>
    </string-array>

    <string-array name="drawer_list">
        <item>Home</item>
        <item>Setting</item>
        <item>Saved House</item>
    </string-array>

    <!--actionbar toggle-->
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <!--Project Number-->
    <string name="google_app_id">1042260367377</string>

</resources>
